<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.acme.monedas.MainActivity"
        android:background="@color/colorAccent3"
        android:weightSum="12">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_guia3"
                android:id="@+id/textView"
                android:textColor="@android:color/white"
                android:textSize="30dp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                android:text="@string/brasil_pesos"
            android:id="@+id/cb_bra"
            android:textColor="@color/colorLetra"
            android:textSize="25dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="$$"
                android:id="@+id/txt_bra"
                android:textColor="@android:color/white"
                android:textSize="40dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                android:text="@string/chile_pesos"
            android:id="@+id/cb_chi"
            android:textColor="@color/colorLetra"
            android:textSize="25dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="$$"
                android:id="@+id/txt_chi"
                android:textColor="@android:color/white"
                android:textSize="40dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colombia_pesos"
                android:id="@+id/cb_col"
                android:textColor="@color/colorLetra"
                android:textSize="25dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="$$"
                android:id="@+id/txt_col"
                android:textColor="@android:color/white"
                android:textSize="40dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usa_dolar"
                android:id="@+id/cb_usa"
                android:textColor="@color/colorLetra"
                android:textSize="25dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="$$"
                android:id="@+id/txt_usa"
                android:textColor="@android:color/white"
                android:textSize="40dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                android:text="@string/japon_yen"
            android:id="@+id/cb_jap"
            android:textColor="@color/colorLetra"
            android:textSize="25dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="$$"
                android:id="@+id/txt_jap"
                android:textColor="@android:color/white"
                android:textSize="40dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/china_yuan"
                android:id="@+id/cb_china"
                android:textColor="@color/colorLetra"
                android:textSize="25dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="$$"
                android:id="@+id/txt_china"
                android:textColor="@android:color/white"
                android:textSize="40dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mexico_pesos"
                android:id="@+id/cb_mex"
                android:textColor="@color/colorLetra"
                android:textSize="25dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="$$"
                android:id="@+id/txt_mex"
                android:textColor="@android:color/white"
                android:textSize="40dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/euro"
                android:id="@+id/cb_euro"
                android:textColor="@color/colorLetra"
                android:textSize="25dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="$$"
                android:id="@+id/txt_euro"
                android:textColor="@android:color/white"
                android:textSize="40dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:orientation="vertical"
            android:layout_weight="2"
            android:gravity="bottom">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/convertir"
                android:textSize="25dp"
                android:paddingRight="50dp"
                android:paddingLeft="50dp"
                android:textStyle="bold"
                android:id="@+id/btn_convertir"
                android:textColor="@color/colorLetra"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorPrimaryDark"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>